--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -16,6 +16,6 @@
 	layout-navleft-1col.css
 	layout-navleft-2col.css
 */
-@import url("layout-navtop-localleft.css");
+@import url("tables.css");
+@import url("layout-navtop-3col.css");
 @import url("layout.css");
-        
