--- a/src/main/webapp/styles/typo.css
+++ b/src/main/webapp/styles/typo.css
@@ -106,45 +106,7 @@
         white-space: pre;
     }
 /* END TEXT */
-	
-/* LISTS */
-	ul {
-        line-height:1.4em;
-		margin: 0 0 1.5em 0;
-		padding: 0;
-	}
-	ul li {
-		margin: 0 0 0.25em 30px;
-		padding: 0;
-	}
-	ol {
-		font-size: 1.0em;
-		line-height: 1.4em;
-		margin: 0 0 1.5em 0;
-		padding: 0;
-	}
-	ol li {
-		font-size: 1.0em;
-		margin: 0 0 0.25em 30px;
-		padding: 0;
-	}
-	dl {
-		margin: 0 0 1.5em 0;
-		padding: 0;
-		line-height: 1.4em;
-	}
-	dl dt {
-		font-weight: bold;
-		margin: 0.25em 0 0.25em 0;
-		padding: 0;
-	}
-	dl dd {
-		margin: 0 0 0 30px;
-		padding: 0;
-	}
-/* END LISTS */
-	
-	
+		
 /* TABLE */
 	table {
         font-size: 1em;
@@ -172,6 +134,10 @@
 		height: 1px;
 		margin: 1.5em 10px;
 		border-bottom: 1px dotted black;
+	}
+	
+	input[type=text] {
+		background-color: white;
 	}
 	
 /* END TYPOGRAPHY */	
