--- a/src/main/webapp/styles/marquee.css
+++ b/src/main/webapp/styles/marquee.css
@@ -7,6 +7,15 @@ div.demo {
 	width: 300px;
 }
 
+div.demo a {
+	text-decoration: none;
+}
+
+div.demo a:hover {
+	color: red;
+	background-color: #FFFFFF;
+}
+
 div.original {
 	border: 3px solid #B40400;
 	padding: 10px;
