--- a/src/main/webapp/styles/layout.css
+++ b/src/main/webapp/styles/layout.css
@@ -21,7 +21,7 @@ div#page {
 
 /* Header */
 div#header {
-    height: 80px;
+    height: 127px;
     color: white;
     background: #467aa7;
     
@@ -105,4 +105,15 @@ div#footer p {
 	padding: 10px 10px 10px 10px;
 	background-color: #E1E1E1;
 	font: 13px verdana, arial, tahoma, sans-serif;
+}
+
+#login {
+	text-align: left;
+	width: 200px;
+	height: 95px;
+	position: inherit;
+	padding-left: 10px;
+	padding-top: 10px;	
+	border: 1px solid;
+	background-color: #356595;
 }
