--- a/src/main/webapp/styles/layout.css
+++ b/src/main/webapp/styles/layout.css
@@ -117,3 +117,13 @@ div#footer p {
 	border: 1px solid;
 	background-color: #356595;
 }
+
+.postsTitulo {
+	font-size: 22px;
+	font-weight: bold;
+}
+
+.postsFooter {
+	font-size: 10px;
+	font-style: italic;
+}
