--- a/src/main/webapp/styles/layout.css
+++ b/src/main/webapp/styles/layout.css
@@ -152,3 +152,13 @@ div#footer p {
 .postFooter a:hover {
 	color: red;
 }
+
+#minicursos {
+	padding: 10px 10px 10px 10px;
+	top: 20px;
+	position: absolute;
+	width: 560px;
+	margin-left: 20px;
+	border: solid 2px #356595;
+}
+
