--- a/src/main/webapp/styles/layout.css
+++ b/src/main/webapp/styles/layout.css
@@ -159,6 +159,6 @@ div#footer p {
 	position: absolute;
 	width: 560px;
 	margin-left: 20px;
-	border: solid 2px #356595;
+	border: solid 3px #356595;
+	height: 350px;
 }
-
