--- a/src/main/webapp/styles/layout.css
+++ b/src/main/webapp/styles/layout.css
@@ -161,7 +161,17 @@ div#footer p {
 	width: 560px;
 	margin-left: 20px;
 	border: solid 3px #356595;
-	height: 350px;
+	height: 160px;
+}
+
+#eventos {
+	padding: 10px 10px 10px 10px;
+	top: 210px;
+	position: absolute;
+	width: 560px;
+	margin-left: 20px;
+	border: solid 3px #356595;
+	height: 160px;
 }
 
 #imagem {
