--- a/src/main/webapp/styles/marquee.css
+++ b/src/main/webapp/styles/marquee.css
@@ -2,6 +2,7 @@ div.demo {
 	height: 350px;
 	border: 3px solid #0BB427;
 	padding: 10px;
+	position: relative;
 	margin-right: 20px;
 	margin-top: 20px;
 	margin-bottom: 20px;
